# inference-benchmarks

./: .bazelrc  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  BUILD  CONTEXT.md  MODULE.bazel  README.md  TASKS.md  WORKSPACE  index.html  pyproject.toml  requirements.in  requirements.txt  ruff.toml  run_all.py  run_torch_trt.py  versions.toml
.claude/: settings.local.json
benchmark/: BUILD  registry.py  run_resnet50.py  runner.py
ci/: BUILD  doc_gardening.py  doc_review.py  lint.py  weekly_doc_review.py
derisk/: BUILD  derisk.py  derisk_metrics_cosmos_reason.py
docker/: BUILD  Dockerfile  Dockerfile.dev  build.sh  docker-compose.yml  push.sh  saip.bashrc  saip.zshrc
docs/: AGENT_LOOP.md  BUILD  CI.md  DOCKER.md  FEATURE_WORKFLOW.md  MODELS.md  OBSERVABILITY.md  QUALITY_SCORE.md  RUNTIMES.md  THOR_SETUP.md  VERSIONING.md  WEBSITE.md
hardware/: BUILD  thor.py
inputs/: BUILD  dinov2.py  imagenet.py  lingoqa.py
lib/: BUILD  log.py
models/: BUILD  loader.py
profiles/: aot_inductor_resnet50_fp16_thor_20260412T151408Z.txt  pytorch_resnet50_fp32_thor_20260412T151353Z.txt  tensorrt_resnet50_fp16_thor_20260412T151407Z.txt  torch_tensorrt_dinov2_b_fp32_thor_20260412T152350Z.txt
results/: aot_inductor_dinov2_b_fp16_thor_20260405T103646Z.json  aot_inductor_dinov2_b_fp16_thor_20260405T173447Z.json  aot_inductor_dinov2_b_fp16_thor_20260405T175201Z.json  aot_inductor_dinov2_b_fp16_thor_20260405T181803Z.json  aot_inductor_dinov2_b_fp16_thor_20260405T183904Z.json  aot_inductor_dinov2_b_fp16_thor_20260405T191614Z.json  aot_inductor_dinov2_b_fp16_thor_20260405T192630Z.json  aot_inductor_dinov2_b_fp16_thor_20260412T020535Z.json  aot_inductor_dinov2_b_fp16_thor_20260412T151441Z.json  aot_inductor_dinov2_b_fp32_thor_20260405T103549Z.json  aot_inductor_dinov2_b_fp32_thor_20260405T173338Z.json  aot_inductor_dinov2_b_fp32_thor_20260405T175105Z.json  aot_inductor_dinov2_b_fp32_thor_20260405T181705Z.json  aot_inductor_dinov2_b_fp32_thor_20260405T183813Z.json  aot_inductor_dinov2_b_fp32_thor_20260405T191325Z.json  aot_inductor_dinov2_b_fp32_thor_20260405T192342Z.json  aot_inductor_dinov2_b_fp32_thor_20260412T020245Z.json  aot_inductor_dinov2_b_fp32_thor_20260412T151437Z.json  aot_inductor_dinov2_b_thor_20260405T100533Z.json  aot_inductor_dinov2_b_thor_20260405T101205Z.json  aot_inductor_resnet50_fp16_thor_20260405T102142Z.json  aot_inductor_resnet50_fp16_thor_20260405T103441Z.json  aot_inductor_resnet50_fp16_thor_20260405T173219Z.json  aot_inductor_resnet50_fp16_thor_20260405T174956Z.json  aot_inductor_resnet50_fp16_thor_20260405T181556Z.json  aot_inductor_resnet50_fp16_thor_20260405T183703Z.json  aot_inductor_resnet50_fp16_thor_20260405T191028Z.json  aot_inductor_resnet50_fp16_thor_20260405T192045Z.json  aot_inductor_resnet50_fp16_thor_20260412T015943Z.json  aot_inductor_resnet50_fp16_thor_20260412T151408Z.json  aot_inductor_resnet50_fp32_thor_20260405T101941Z.json  aot_inductor_resnet50_fp32_thor_20260405T103239Z.json  aot_inductor_resnet50_fp32_thor_20260405T172953Z.json  aot_inductor_resnet50_fp32_thor_20260405T174733Z.json  aot_inductor_resnet50_fp32_thor_20260405T181337Z.json  aot_inductor_resnet50_fp32_thor_20260405T183512Z.json  aot_inductor_resnet50_fp32_thor_20260405T190721Z.json  aot_inductor_resnet50_fp32_thor_20260405T191737Z.json  (+183 more)
runtimes/: BUILD  base.py
site/: BUILD  (+2 more)
(+111 files in other folders)
