"""Bzlmod module definition for inference-benchmarks."""

module(
    name = "inference_benchmarks",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.36.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
    extra_pip_args = ["--extra-index-url", "https://pypi.jetson-ai-lab.io/jp7/cu130"],
)
use_repo(pip, "pip")
