[project]
name = "inference-benchmarks"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 line-too-long is handled by formatter, not linter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test helpers may use assert without message
"**/test_*.py" = ["S101"]
