[project]
name = "inference-benchmarks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "jsonschema>=4.0.0",
    "jinja2>=3.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
# CPU/Mac dev — standard PyPI wheels
dev = [
    "torch>=2.7.0",
    "executorch>=0.5.1",
]
# Jetson/GPU — same packages; Dockerfile adds --extra-index-url for Jetson wheels
gpu = [
    "torch>=2.7.0",
    "executorch>=0.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 line-too-long is handled by formatter, not linter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test helpers may use assert without message
"**/test_*.py" = ["S101"]
