[project]
name = "inference-benchmarks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "jsonschema>=4.0.0",
    "jinja2>=3.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
# Dev container: lint, CI tooling, Thor orchestration — no inference libs
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
# Runtime container (Thor/GPU only) — Dockerfile adds Jetson wheel index
gpu = [
    "torch>=2.7.0",
    "torchvision>=0.20.0",
    "torch-tensorrt>=2.7.0",
    "onnx>=1.16.0",
    "onnxscript>=0.1.0",
    "executorch>=0.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 line-too-long is handled by formatter, not linter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test helpers may use assert without message
"**/test_*.py" = ["S101"]
